Hard fix to widget overflows

--- a/src/styles/sections/content_template_article.scss
+++ b/src/styles/sections/content_template_article.scss
@@ -175,7 +175,7 @@ $silo-width: 275;
   }
 
   .content-template-main {
-    @apply col-start-2 col-end-3 row-start-2 row-end-3 prose max-w-none
+    @apply col-start-2 col-end-3 row-start-2 row-end-3 prose max-w-full overflow-hidden
       lg:col-start-1 lg:col-end-2 lg:row-start-3 lg:row-end-4
       md:prose-sm;
 
